bitfield/tests/11-bits-attribute-wrong.stderr
error[E0308]: mismatched types
  --> tests/11-bits-attribute-wrong.rs:11:14
   |
9  | #[bitfield]
   | ----------- expected due to this
10 | pub struct RedirectionTableEntry {
11 |     #[bits = 9]
   |              ^ expected an array with a fixed size of 1 element, found one with 9 elements
